v 2.0.5 -- SEE NEWS FOR DETAILS

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+SSHAARP 2.0.5 (12/10/2024)
+-----------------------------
+  * Fixed width error in PALM documentation
+  * Vignette changes
+
+SSHAARP 2.0.4 (12/2/2024)
+-----------------------------
+  * Documentation changes
+
 SSHAARP 2.0.3 (11/20/2024)
 -----------------------------
   * Vignette changes
